#pragma once

#include <SFML/Graphics/RenderWindow.hpp>
#include <SFML/Window/Event.hpp>

namespace pacman::client::screen {

class Screen {
public:
  virtual ~Screen() = default;

  virtual void onEnter() = 0;
  virtual void onExit() = 0;
  virtual void handleEvent(const sf::Event &event) = 0;
  virtual void update(float dt) = 0;
  virtual void draw(sf::RenderWindow &window) = 0;
};

} // namespace pacman::client::screen
