@startuml Application
top to bottom direction
skinparam classAttributeIconSize 0
skinparam packageStyle rectangle
skinparam shadowing false
title PacMan — Full Application Overview
legend right
  <<planned>> = designed, not yet implemented
  Arrows: --> uses/depends   *-- owns   ..|> implements
endlegend

' ── Utils ────────────────────────────────────────────────────────────────────
' Utils package removed for brevity. See class_diagram_core.puml / class_diagram_server.puml
' / class_diagram_client.puml for Logger, LoggerConfig, IPublisher<M>, ISubscriber<M>.

' ── Core ─────────────────────────────────────────────────────────────────────
package "Core (src/core/)" <<Rectangle>> {

  package "maps" {
    class Tile <<struct>> {
      + pos : array<size_t, 2>
      --
      + col() : size_t
      + row() : size_t
    }
    class Map <<struct>> {
      + name         : string
      + width        : size_t
      + height       : size_t
      + tileSize     : float
      + minPlayers   : int
      + tiles        : vector<string>
      + pacmanSpawns : vector<Tile>
      + ghostSpawns  : GhostSpawns
      --
      + isValid()    : string
      + tileAt(c, r) : char
    }
    class MapsManager <<utility>> {
      - {static} m_logger : Logger
      --
      + {static} loadFromFile(path) : expected<Map, string>
      + {static} loadFromJson(json) : expected<Map, string>
    }
    MapsManager ..> Map
  }

  package "ecs" {
    class Position <<component>> {
      + x : float
      + y : float
      --
    }
    class Velocity <<component>> {
      + speed : float
      --
    }
    class DirectionState <<component>> {
      + current : Direction
      + next    : Direction
      --
    }
    class Collider <<component>> {
      + width  : float
      + height : float
      --
    }
    class PlayerState <<component>> {
      + score     : int
      + lives     : int
      + isPowered : bool
      --
    }
    class GhostState <<component>> {
      + mode : Mode
      --
      enum Mode { Chase, Scatter, Frightened, Eaten }
    }
    class PacManTag      <<marker>>
    class GhostTag       <<marker>>
    class PelletTag      <<marker>>
    class PowerPelletTag <<marker>>
    class WallTag        <<marker>>
  }

  package "simulation" {
    class Simulation {
      - m_logger : Logger
      --
      + applyInput(registry, entity, input)
      + update(registry, dt, map)
    }
    Simulation ..> Map
  }
}

' ── Server ───────────────────────────────────────────────────────────────────
package "Server (src/server/)" <<Rectangle>> {

  class ServerConfig <<struct>> {
    + port             : int
    + mapPath          : string
    + maxPlayers       : int
    + tickRate         : int
    + renderAscii      : bool
    + renderIntervalMs : int
    --
  }

  class ServerApp {
    - m_config       : ServerConfig
    - m_network      : ServerNetwork
    - m_currentPhase : unique_ptr<Phase>
    - m_logger       : Logger
    --
    + run()
    + stop()
    + setPhase(phase)
    + network() : ServerNetwork&
    + config()  : ServerConfig&
  }

  interface INetworkEventHandler {
    --
    + onPlayerConnect(id)
    + onPlayerDisconnect(id)
    + onLobbyReady(id, ready)
    + onReadyToPlay(id)
    + onPlayerInput(packet)
  }

  class ServerNetwork {
    - m_impl    : Impl
    - m_handler : INetworkEventHandler*
    --
    + start(port, maxClients) : bool
    + stop()
    + setHandler(h)
    + clearHandler()
    + broadcastSnapshot(pkt)
    + poll()
  }

  abstract class Phase {
    --
    + {abstract} onEnter()
    + {abstract} onExit()
    + {abstract} update(dt)
  }

  class LobbyPhase {
    - m_slots       : PlayerSlot[4]
    - m_playerCount : uint8_t
    --
    + onEnter()
    + onExit()
    + update(dt)
  }

  class GamePhase {
    - m_registry   : entt::registry
    - m_simulation : Simulation
    - m_aiSystem   : AISystem
    - m_rules      : AuthoritativeLogic
    --
    + onEnter()
    + onExit()
    + update(dt)
  }

  class AISystem {
    - m_phaseTimer : GhostPhaseTimer
    --
    + update(registry, map, dt)
    + onPowerPelletEaten()
  }

  class AuthoritativeLogic <<planned>> {
    --
    + applyRules(registry, map, dt)
  }

  class AsciiRenderer <<planned>> {
    --
    + render(registry, map)
  }

  ServerApp     *-- ServerNetwork
  ServerApp     *-- Phase
  ServerNetwork --> INetworkEventHandler
  LobbyPhase    ..|> Phase
  LobbyPhase    ..|> INetworkEventHandler
  GamePhase     ..|> Phase
  GamePhase     ..|> INetworkEventHandler
  GamePhase     *-- AISystem
  GamePhase     *-- AuthoritativeLogic

  ServerApp  --> ServerConfig : uses >
  GamePhase  --> Simulation   : uses >
  AISystem   --> Map          : uses >
  AsciiRenderer --> Map       : uses >
}

' ── Client ───────────────────────────────────────────────────────────────────
package "Client (src/client/)" <<Rectangle>> {

  class ClientConfig <<struct>> {
    + windowWidth   : int
    + windowHeight  : int
    + playerName    : string
    + serverAddress : string
    + serverPort    : int
    --
  }

  class ClientApp {
    - m_window        : Window
    - m_screenManager : ScreenManager
    - m_inputManager  : InputManager
    - m_uiOverlay     : UIOverlay
    --
    + run()
  }

  interface Screen {
    --
    + {abstract} onEnter()
    + {abstract} onExit()
    + {abstract} handleEvent(event)
    + {abstract} update(dt)
    + {abstract} draw(window)
  }

  class ScreenManager {
    - m_currentScreen : unique_ptr<Screen>
    --
    + setScreen(screen)
    + applyPendingTransition()
  }

  class InputManager {
    - m_currentDirection : Direction
    --
    + poll(tick) : Input
  }

  class Renderer {
    --
    + render(window, registry, map)
  }

  interface IClientNetworkListener {
    --
    + {abstract} onConnected(assignedId)
    + {abstract} onDisconnected()
    + {abstract} onLobbyState(packet)
    + {abstract} onGameStart(packet)
    + {abstract} onGameSnapshot(packet)
    + {abstract} onRoundEnd(packet)
    + {abstract} onServerShutdown(packet)
  }

  class ClientNetwork <<planned>> {
    - m_impl     : Impl
    - m_listener : IClientNetworkListener*
    --
    + connect(host, port) : bool
    + setListener(listener)
    + sendInput(packet)
    + poll()
  }

  class MenuScreen {
    - m_mapPath    : string
    - m_shouldQuit : bool
    --
    + shouldQuit() : bool
  }
  class LobbyScreen {
    - m_network       : ClientNetwork&
    - m_localPlayerId : PlayerId
    - m_isHost        : bool
    --
  }
  class LoadingScreen {
    - m_network       : ClientNetwork&
    - m_mapParsed     : bool
    --
  }
  class GameScreen {
    - m_registry   : entt::registry
    - m_map        : Map
    - m_simulation : Simulation
    - m_renderer   : Renderer
    --
  }
  class ResultsScreen {
    - m_network       : ClientNetwork*
    - m_localPlayerId : PlayerId
    --
  }

  class ProcessSpawner <<utility planned>> {
    --
    + {static} spawn(exe, args)
    + {static} findServerBinary()
  }

  ClientApp     *-- ScreenManager
  ClientApp     *-- InputManager
  ScreenManager *-- Screen
  ClientNetwork --> IClientNetworkListener

  MenuScreen    ..|> Screen
  LobbyScreen   ..|> Screen
  LobbyScreen   ..|> IClientNetworkListener
  LoadingScreen ..|> Screen
  LoadingScreen ..|> IClientNetworkListener
  GameScreen    ..|> Screen
  ResultsScreen ..|> Screen
  GameScreen    *-- Renderer

  ClientApp     --> ClientConfig  : uses >
  GameScreen    --> Simulation    : uses >
  GameScreen    --> Map           : uses >
  Renderer      --> Map           : uses >
  LobbyScreen   --> ClientNetwork : uses >
  LoadingScreen --> ClientNetwork : uses >
  MenuScreen    ..> ProcessSpawner : spawns server >
}

' ── Layout hints ─────────────────────────────────────────────────────────────
"Server (src/server/)" -[hidden]-> "Core (src/core/)"
"Core (src/core/)" -[hidden]-> "Client (src/client/)"

@enduml
